# PlatypusScript

./: .gitignore  .gitmodules  README.md
common/: parser.c  types.h
platform_pico/: CMakeLists.txt  hid.c  hw_config.c  main.c  platypus.h  tusb_config.h  usb_descriptors.c
